--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,8 @@
-bin_PROGRAMS = fatcache stg_ins_test
+bin_PROGRAMS = fatcache #stg_ins_test
 
 AM_CPPFLAGS = -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64
-CFLAGS = -g
+CFLAGS = -g 
+CXXFLAGS = -fPIC -fpermissive
 AM_CFLAGS = -Wall
 AM_CFLAGS += -Wmissing-prototypes -Wmissing-declarations -Wredundant-decls
 AM_CFLAGS += -fno-strict-aliasing
@@ -10,37 +11,37 @@ AM_CFLAGS += -Wunused-function -Wunused-value -Wunused-variable
 LDFLAGS += -rdynamic
 
 fatcache_SOURCES =			\
-	fc_core.c fc_core.h		\
-	fc_connection.c fc_connection.h	\
-	fc_server.c fc_server.h		\
-	fc_client.c fc_client.h		\
-	fc_slab.c fc_slab.h		\
-	fc_item.c fc_item.h		\
-	fc_itemx.c fc_itemx.h		\
-	fc_memcache.c fc_memcache.h	\
-	fc_message.c fc_message.h	\
-	fc_request.c			\
-	fc_response.c			\
-	fc_mbuf.c fc_mbuf.h		\
-	fc_signal.c fc_signal.h		\
-	fc_event.c fc_event.h		\
-	fc_time.c fc_time.h		\
-	fc_sha1.c fc_sha1.h		\
-	fc_log.c fc_log.h		\
-	fc_string.c fc_string.h		\
-	fc_array.c fc_array.h		\
-	fc_util.c fc_util.h		\
-	fc_stats.c fc_stats.h		\
+	fc_core.cc fc_core.h		\
+	fc_connection.cc fc_connection.h	\
+	fc_server.cc fc_server.h		\
+	fc_client.cc fc_client.h		\
+	fc_slab.cc fc_slab.h		\
+	fc_item.cc fc_item.h		\
+	fc_itemx.cc fc_itemx.h		\
+	fc_memcache.cc fc_memcache.h	\
+	fc_message.cc fc_message.h	\
+	fc_request.cc			\
+	fc_response.cc			\
+	fc_mbuf.cc fc_mbuf.h		\
+	fc_signal.cc fc_signal.h		\
+	fc_event.cc fc_event.h		\
+	fc_time.cc fc_time.h		\
+	fc_sha1.cc fc_sha1.h		\
+	fc_log.cc fc_log.h		\
+	fc_string.cc fc_string.h		\
+	fc_array.cc fc_array.h		\
+	fc_util.cc fc_util.h		\
+	fc_stats.cc fc_stats.h		\
 	fc_queue.h			\
-	fc.c
+	fc.cc
 
 stg_ins_test_SOURCES =			\
-	fc_slab.c fc_slab.h		\
-	fc_item.c fc_item.h		\
-	fc_itemx.c fc_itemx.h		\
-	fc_time.c fc_time.h		\
-	fc_sha1.c fc_sha1.h		\
-	fc_log.c fc_log.h		\
-	fc_util.c fc_util.h		\
+	fc_slab.cc fc_slab.h		\
+	fc_item.cc fc_item.h		\
+	fc_itemx.cc fc_itemx.h		\
+	fc_time.cc fc_time.h		\
+	fc_sha1.cc fc_sha1.h		\
+	fc_log.cc fc_log.h		\
+	fc_util.cc fc_util.h		\
 	fc_queue.h			\
-    stg_ins_test.c
+    stg_ins_test.cc
