--- a/src/Makefile
+++ b/src/Makefile
@@ -181,12 +181,12 @@ ETAGS = etags
 CTAGS = ctags
 am__DIST_COMMON = $(srcdir)/Makefile.in $(top_srcdir)/config/depcomp
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/yiliu/fatcache/config/missing aclocal-1.15
+ACLOCAL = ${SHELL} /home/yiliu/bb/fatcache/config/missing aclocal-1.15
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
-AUTOCONF = ${SHELL} /home/yiliu/fatcache/config/missing autoconf
-AUTOHEADER = ${SHELL} /home/yiliu/fatcache/config/missing autoheader
-AUTOMAKE = ${SHELL} /home/yiliu/fatcache/config/missing automake-1.15
+AUTOCONF = ${SHELL} /home/yiliu/bb/fatcache/config/missing autoconf
+AUTOHEADER = ${SHELL} /home/yiliu/bb/fatcache/config/missing autoheader
+AUTOMAKE = ${SHELL} /home/yiliu/bb/fatcache/config/missing automake-1.15
 AWK = mawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -195,7 +195,7 @@ CPP = gcc -E
 CPPFLAGS = 
 CXX = g++
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = -fPIC -fpermissive
+CXXFLAGS = -fPIC -fpermissive --std=c++98
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
@@ -214,7 +214,7 @@ LDFLAGS =  -rdynamic
 LIBOBJS = 
 LIBS = -lpthread 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/yiliu/fatcache/config/missing makeinfo
+MAKEINFO = ${SHELL} /home/yiliu/bb/fatcache/config/missing makeinfo
 MKDIR_P = /bin/mkdir -p
 OBJEXT = o
 PACKAGE = fatcache
@@ -229,10 +229,10 @@ SET_MAKE =
 SHELL = /bin/bash
 STRIP = 
 VERSION = 0.1.1
-abs_builddir = /home/yiliu/fatcache/src
-abs_srcdir = /home/yiliu/fatcache/src
-abs_top_builddir = /home/yiliu/fatcache
-abs_top_srcdir = /home/yiliu/fatcache
+abs_builddir = /home/yiliu/bb/fatcache/src
+abs_srcdir = /home/yiliu/bb/fatcache/src
+abs_top_builddir = /home/yiliu/bb/fatcache
+abs_top_srcdir = /home/yiliu/bb/fatcache
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 am__include = include
@@ -260,7 +260,7 @@ host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/yiliu/fatcache/config/install-sh
+install_sh = ${SHELL} /home/yiliu/bb/fatcache/config/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
