--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -195,7 +195,7 @@ CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CXX = @CXX@
 CXXDEPMODE = @CXXDEPMODE@
-CXXFLAGS = -fPIC -fpermissive
+CXXFLAGS = -fPIC -fpermissive --std=c++98
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
