--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -89,7 +89,7 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 target_triplet = @target@
-bin_PROGRAMS = fatcache$(EXEEXT)
+bin_PROGRAMS = fatcache$(EXEEXT) stg_ins_test$(EXEEXT)
 subdir = src
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
@@ -112,6 +112,11 @@ am_fatcache_OBJECTS = fc_core.$(OBJEXT) fc_connection.$(OBJEXT) \
 	fc_util.$(OBJEXT) fc_stats.$(OBJEXT) fc.$(OBJEXT)
 fatcache_OBJECTS = $(am_fatcache_OBJECTS)
 fatcache_LDADD = $(LDADD)
+am_stg_ins_test_OBJECTS = fc_slab.$(OBJEXT) fc_item.$(OBJEXT) \
+	fc_itemx.$(OBJEXT) fc_time.$(OBJEXT) fc_sha1.$(OBJEXT) \
+	fc_log.$(OBJEXT) fc_util.$(OBJEXT) stg_ins_test.$(OBJEXT)
+stg_ins_test_OBJECTS = $(am_stg_ins_test_OBJECTS)
+stg_ins_test_LDADD = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -153,8 +158,8 @@ AM_V_CCLD = $(am__v_CCLD_@AM_V@)
 am__v_CCLD_ = $(am__v_CCLD_@AM_DEFAULT_V@)
 am__v_CCLD_0 = @echo "  CCLD    " $@;
 am__v_CCLD_1 = 
-SOURCES = $(fatcache_SOURCES)
-DIST_SOURCES = $(fatcache_SOURCES)
+SOURCES = $(fatcache_SOURCES) $(stg_ins_test_SOURCES)
+DIST_SOURCES = $(fatcache_SOURCES) $(stg_ins_test_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -195,7 +200,7 @@ CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CXX = @CXX@
 CXXDEPMODE = @CXXDEPMODE@
-CXXFLAGS = -fPIC -fpermissive --std=c++98
+CXXFLAGS = -fPIC -fpermissive #--std=c++98
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
@@ -405,6 +410,10 @@ fatcache$(EXEEXT): $(fatcache_OBJECTS) $(fatcache_DEPENDENCIES) $(EXTRA_fatcache
 	@rm -f fatcache$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(fatcache_OBJECTS) $(fatcache_LDADD) $(LIBS)
 
+stg_ins_test$(EXEEXT): $(stg_ins_test_OBJECTS) $(stg_ins_test_DEPENDENCIES) $(EXTRA_stg_ins_test_DEPENDENCIES) 
+	@rm -f stg_ins_test$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(stg_ins_test_OBJECTS) $(stg_ins_test_LDADD) $(LIBS)
+
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
 
@@ -433,6 +442,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fc_string.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fc_time.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fc_util.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/stg_ins_test.Po@am__quote@
 
 .cc.o:
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
