--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,7 @@ bin_PROGRAMS = fatcache stg_ins_test
 
 AM_CPPFLAGS = -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64
 CFLAGS = -g 
-CXXFLAGS = -fPIC -fpermissive #--std=c++98
+CXXFLAGS = -fPIC -fpermissive
 AM_CFLAGS = -Wall
 AM_CFLAGS += -Wmissing-prototypes -Wmissing-declarations -Wredundant-decls
 AM_CFLAGS += -fno-strict-aliasing
@@ -37,8 +37,7 @@ fatcache_SOURCES =			\
 	common.h		\
     cuckoo_ht.h		\
     debugbreak.h		\
-    farmhash.h		\
-    farmhash.cc		\
+    farmhash.cc farmhash.h		\
     hash2.h			\
     hashutil.h		\
     lfsr64.h		\
