--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -201,7 +201,7 @@ CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CXX = @CXX@
 CXXDEPMODE = @CXXDEPMODE@
-CXXFLAGS = -fPIC -fpermissive #--std=c++98
+CXXFLAGS = -fPIC -fpermissive
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
@@ -322,8 +322,7 @@ fatcache_SOURCES = \
 	common.h		\
     cuckoo_ht.h		\
     debugbreak.h		\
-    farmhash.h		\
-    farmhash.cc		\
+    farmhash.cc farmhash.h		\
     hash2.h			\
     hashutil.h		\
     lfsr64.h		\
