[fixed] namespace problem

--- a/src/Makefile
+++ b/src/Makefile
@@ -89,7 +89,7 @@ POST_UNINSTALL = :
 build_triplet = x86_64-pc-linux-gnu
 host_triplet = x86_64-pc-linux-gnu
 target_triplet = x86_64-pc-linux-gnu
-bin_PROGRAMS = fatcache$(EXEEXT) stg_ins_test$(EXEEXT)
+bin_PROGRAMS = stg_ins_test$(EXEEXT) fatcache$(EXEEXT)
 subdir = src
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
