--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -89,7 +89,7 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 target_triplet = @target@
-bin_PROGRAMS = fatcache$(EXEEXT) stg_ins_test$(EXEEXT)
+bin_PROGRAMS = stg_ins_test$(EXEEXT) fatcache$(EXEEXT)
 subdir = src
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
